--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -117,3 +117,14 @@
   transform: rotate(90deg);
   cursor: pointer;
 }
+
+.modal-image-wrapper {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.modal-image-wrapper img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
