--- a/src/css/bills.css
+++ b/src/css/bills.css
@@ -1,7 +1,7 @@
 .content {
   width: 100%;
-  margin-top: 76px; 
-  margin-left: 76px; 
+  margin-top: 76px;
+  margin-left: 76px;
   margin-right: 76px;
 }
 
@@ -14,11 +14,11 @@
 }
 
 .content-header {
-  width: 100%; 
-  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
-  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  width: 100%;
+  display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox; /* TWEENER - IE 10 */
   display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
-  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
+  display: flex; /* NEW, Spec - Firefox, Chrome, Opera */
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
@@ -26,7 +26,7 @@
   align-items: center;
 }
 
-.content-title{
+.content-title {
   font-style: normal;
   font-weight: 500;
   font-size: 48px;
@@ -36,7 +36,7 @@
 #btn-new-bill {
   width: 350px;
   height: 36px;
-  background-color: #0E5AE5;
+  background-color: #0e5ae5;
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
@@ -47,7 +47,7 @@
 #data-table {
   text-align: left;
   margin-top: 50px;
-  border: 2px solid #F3F5FA;
+  border: 2px solid #f3f5fa;
   box-sizing: border-box;
   border-radius: 10px;
   padding-bottom: 16px;
@@ -63,7 +63,8 @@
   align-items: center;
 }
 
-.table td, .table th {
+.table td,
+.table th {
   border-top: 0px solid #fff !important;
 }
 
@@ -71,7 +72,8 @@
   border-bottom: 0px solid #fff !important;
 }
 
-.table td, .table th {
+.table td,
+.table th {
   border-top: 0px solid #fff !important;
 }
 
@@ -80,10 +82,11 @@ thead {
 }
 
 .table-striped tbody tr:nth-of-type(odd) {
-  background-color:#F3F5FA !important;
+  background-color: #f3f5fa !important;
 }
 
-th, td {
+th,
+td {
   padding-left: 40px !important;
   padding-right: 40px !important;
 }
@@ -94,18 +97,18 @@ tr td:first-of-type {
 
 tr td:nth-of-type(2) {
   font-weight: 500;
-  color: #0E5AE5;
+  color: #0e5ae5;
 }
 
 tr td:nth-of-type(3) {
-  color:#979797;
+  color: #979797;
 }
 
 tr td:nth-of-type(4) {
-  color:#979797;
+  color: #979797;
 }
 
 tr td:nth-of-type(5) {
   font-weight: 500;
-  color: #0E5AE5;
+  color: #0e5ae5;
 }
